--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,11 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="back_text_color">#B8DCEC</color>
+    <color name="teal_700">#BEBFBF</color>
+    <color name="teal_200">#BEBFBF</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="MainColor">#E7008A</color>
+    <color name="SecondaryColor">#0E7543</color>
 </resources>
