--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -7,86 +7,118 @@
     tools:context=".Login">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center_vertical"
+        android:id="@+id/linearLayoutCompat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="32dp"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Urdu"
+        app:layout_constraintStart_toEndOf="@+id/English"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/fruit_sabzi_image"
             app:shapeAppearanceOverlay="@style/circular"
-            app:srcCompat="@drawable/ic_namal_png" />
+            app:srcCompat="@drawable/ic_namal_png"
+            tools:layout_conversion_absoluteHeight="180dp"
+            tools:layout_conversion_absoluteWidth="180dp"
+            tools:layout_editor_absoluteX="275dp"
+            tools:layout_editor_absoluteY="-12dp" />
 
         <TextView
             style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Login"
             android:textAlignment="center"
-            android:textColor="@color/SecondaryColor" />
+            android:textColor="@color/SecondaryColor"
+            tools:layout_conversion_absoluteHeight="27dp"
+            tools:layout_conversion_absoluteWidth="667dp"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="168dp" />
 
         <TextView
             style="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@string/LoginDetail"
             android:textAlignment="center"
-            android:textColor="@color/SecondaryColor" />
+            android:textColor="@color/SecondaryColor"
+            tools:layout_conversion_absoluteHeight="19dp"
+            tools:layout_conversion_absoluteWidth="667dp"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="203dp" />
 
         <EditText
             android:id="@+id/emailAddress"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:background="@drawable/text_background"
             android:ems="10"
             android:hint="@string/hintEmail"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:layout_conversion_absoluteHeight="40dp"
+            tools:layout_conversion_absoluteWidth="187dp"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="255dp" />
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
             android:ems="10"
             android:hint="@string/hintPassword"
             android:inputType="textPassword"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:layout_conversion_absoluteHeight="40dp"
+            tools:layout_conversion_absoluteWidth="187dp"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="311dp" />
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:background="@drawable/btn_primary"
-            android:text="@string/LoginButton" />
+            android:text="@string/LoginButton"
+            android:layout_marginTop="8dp"
+            tools:layout_conversion_absoluteHeight="25dp"
+            tools:layout_conversion_absoluteWidth="667dp"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="375dp" />
 
         <TextView
             android:id="@+id/textSinup"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:clickable="true"
             android:onClick="@+id/textSinup"
             android:text="@string/SignupAd"
             android:textAlignment="center"
-            android:textColor="@color/SecondaryColor" />
+            android:layout_marginTop="8dp"
+            android:textColor="@color/SecondaryColor"
+            tools:layout_conversion_absoluteHeight="0dp"
+            tools:layout_conversion_absoluteWidth="667dp"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="424dp" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
