--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -7,23 +7,21 @@
     tools:context=".Login">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageView3"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:src="@drawable/fruit_sabzi_image"
             app:shapeAppearanceOverlay="@style/circular" />
@@ -40,16 +38,14 @@
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="@string/SignupDetail"
             android:textAlignment="center"
             android:textColor="@color/SecondaryColor" />
 
         <EditText
             android:id="@+id/emailAddress"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:background="@drawable/text_background"
             android:ems="10"
             android:hint="@string/hintEmail"
@@ -60,9 +56,9 @@
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
             android:ems="10"
             android:hint="@string/hintPassword"
@@ -73,9 +69,9 @@
 
         <EditText
             android:id="@+id/conformPassword"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
             android:ems="10"
             android:hint="@string/hintConformPassword"
@@ -88,7 +84,7 @@
             android:id="@+id/btnSignup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/btn_primary"
             android:text="Signup" />
 
@@ -96,7 +92,7 @@
             android:id="@+id/textSinup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:clickable="true"
             android:onClick="@+id/btnSinup"
             android:text="@string/AlreadyAccount"
