--- a/app/src/main/res/layout-land/activity_shop__details.xml
+++ b/app/src/main/res/layout-land/activity_shop__details.xml
@@ -15,8 +15,10 @@
         android:paddingEnd="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageView3"
@@ -38,45 +40,47 @@
             style="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="@string/SignupDetail"
             android:textAlignment="center"
             android:textColor="@color/SecondaryColor" />
 
         <EditText
-            android:id="@+id/emailAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/text_background"
-            android:ems="10"
-            android:hint="@string/hintEmail"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/password"
+            android:id="@+id/shopName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
             android:ems="10"
-            android:hint="@string/hintPassword"
-            android:inputType="textPassword"
+            android:hint="@string/shopName"
+            android:inputType="textPersonName"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/conformPassword"
+            android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
             android:ems="10"
-            android:hint="@string/hintConformPassword"
-            android:inputType="textPassword"
+            android:hint="@string/location"
+            android:inputType="textPersonName"
             android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/text_background"
+            android:ems="10"
+            android:hint="@string/phone"
+            android:textColor="@color/white"
+            android:inputType="textPersonName"
             android:textColorHint="@color/white"
             android:textSize="16sp" />
 
@@ -92,7 +96,7 @@
             android:id="@+id/textSinup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="24dp"
             android:clickable="true"
             android:onClick="@+id/btnSinup"
             android:text="@string/AlreadyAccount"
