--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -20,8 +20,10 @@
         android:paddingEnd="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/Urdu"
+        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toEndOf="@+id/English"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.687">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="100dp"
@@ -61,9 +63,9 @@
 
         <EditText
             android:id="@+id/emailAddress"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
             android:ems="10"
             android:hint="@string/hintEmail"
@@ -78,7 +80,7 @@
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
@@ -97,9 +99,9 @@
             android:id="@+id/btnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:background="@drawable/btn_primary"
             android:text="@string/LoginButton"
-            android:layout_marginTop="8dp"
             tools:layout_conversion_absoluteHeight="25dp"
             tools:layout_conversion_absoluteWidth="667dp"
             tools:layout_editor_absoluteX="32dp"
@@ -109,11 +111,11 @@
             android:id="@+id/textSinup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:clickable="true"
             android:onClick="@+id/textSinup"
             android:text="@string/SignupAd"
             android:textAlignment="center"
-            android:layout_marginTop="8dp"
             android:textColor="@color/SecondaryColor"
             tools:layout_conversion_absoluteHeight="0dp"
             tools:layout_conversion_absoluteWidth="667dp"
