--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -15,8 +15,10 @@
         android:paddingEnd="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageView3"
@@ -44,7 +46,8 @@
 
         <EditText
             android:id="@+id/emailAddress"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="24dp"
             android:layout_height="wrap_content"
             android:background="@drawable/text_background"
             android:ems="10"
@@ -56,7 +59,8 @@
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/text_background"
@@ -69,9 +73,10 @@
 
         <EditText
             android:id="@+id/conformPassword"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginLeft="24dp"
             android:background="@drawable/text_background"
             android:ems="10"
             android:hint="@string/hintConformPassword"
@@ -100,6 +105,7 @@
             android:textColor="@color/SecondaryColor" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <Button
         android:id="@+id/English"
         android:layout_width="wrap_content"
