--- a/app/src/main/res/layout/activity_shop__dashboard.xml
+++ b/app/src/main/res/layout/activity_shop__dashboard.xml
@@ -9,12 +9,13 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:id="@+id/appBarLayout"
-        android:background="@color/SecondaryColor"
+        android:background="#DBE4E0"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_height="wrap_content">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
-            android:background="@color/SecondaryColor"
+            android:background="#F3F1F2"
+            app:titleTextColor="@color/SecondaryColor"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"/>
