--- a/app/src/main/res/layout/today_deals_layout.xml
+++ b/app/src/main/res/layout/today_deals_layout.xml
@@ -18,11 +18,20 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/btnClose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_baseline_close_24" />
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/todayDealImage"
             android:layout_width="wrap_content"
             app:shapeAppearanceOverlay="@style/circularImage"
-            android:layout_height="400dp"
+            android:layout_height="250dp"
             style="@style/circular"
             android:gravity="center"
             app:srcCompat="@drawable/fruit_sabzi_image" />
@@ -59,9 +68,9 @@
                 android:id="@+id/todayDealContact"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginStart="114dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="9dp"
-                android:layout_marginEnd="148dp"
+                android:layout_marginEnd="128dp"
                 android:layout_marginBottom="7dp"
                 app:layout_constraintBottom_toTopOf="@+id/todayDealContactNumber"
                 app:layout_constraintEnd_toStartOf="@+id/todayDealCalender"
@@ -73,7 +82,7 @@
                 android:id="@+id/todayDealLocationIcon"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginEnd="325dp"
+                android:layout_marginEnd="300dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.457"
@@ -86,11 +95,15 @@
                 android:id="@+id/todayDealLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="13dp"
                 android:layout_marginBottom="16dp"
                 android:text="Layyah"
+                android:textColor="@color/MainColor"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                tools:layout_editor_absoluteX="4dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/todayDealLocationIcon" />
 
             <TextView
                 android:id="@+id/todayDealDate"
@@ -122,7 +135,7 @@
                 android:id="@+id/todayDealCalender"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginStart="307dp"
+                android:layout_marginStart="280dp"
                 android:layout_marginTop="9dp"
                 android:layout_marginEnd="28dp"
                 android:layout_marginBottom="43dp"
